--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         
         <div class="home-img">
-            <img src="images/your-image.jpg" alt="Your Image Description">
+            <img src="images/profile-image.png" alt="Your Image Description">
         </div>
     </section>
     
