--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo"><span>E</span>Eloissa Andal</a>
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -82,7 +82,7 @@
         <div class="footer-text">
             <p>All Rights Reserved</p>
         </div>
-        
+
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-chevrons-up'></i></a>
         </div>
