CHANGES IN COLOR

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="home" id="home">
         <div class="home-content">
-            <h3>Hello, It's me</h3>
+            <h3>Hello, my name is</h3>
             <h1>Maria Eloissa Andal</h1>
             <h3>And I am a <span class="multiple-text"></span></h3>
             <p>Your introductory text goes here.</p>
@@ -48,12 +48,12 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./assets/profile-image.png" alt="Your Image Description">
+            <img src="./assets/profile-image.png" alt="">
         </div>
 
         <div class="about-content">
-            <h2 class="bx-heading">Anout <span>Me</span></h2>
-            <h3>Frontend Developer!</h3>
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Developer & Designer</h3>
             <p>Creative, hardworking information systems student with an upbeat mindset and a diverse set of strong skills, 
                 anticipating to graduate in July 2025. Seeking an internship to apply for and expand my natural language 
                 processing experience. Technologically competent, with experience with a variety of social media platforms, 
