--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h3>Hello, my name is</h3>
             <h1>Maria Eloissa Andal</h1>
             <h3>And I am a <span class="multiple-text"></span></h3>
-            <p>Your introductory text goes here.</p>
+            <p>I design and code beautifully. Strong attention to small details.</p>
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
