--- a/index.html
+++ b/index.html
@@ -75,27 +75,78 @@
             </div>
             <div class="tab-contents active-tab" id="skills"> <!-- Add id="skills" -->
                 <ul>
-                    <!-- Content for Skills goes here -->
-                    <li>Skill 1</li>
-                    <li>Skill 2</li>
-                    <!-- Add your skills here -->
+                    <li>
+                        <i class='bx bx-code'></i>
+                        <span>Programming Language</span><br>
+                        HTML, CSS, C++, C language, JavaScript, and Python
+                    </li>
+                    <li>
+                        <i class='bx bxs-palette' ></i>
+                        <span>UI/UX</span><br>
+                        Designing Web/App Interfaces
+                    </li>
+                    <li>
+                        <i class='bx bx-mobile-vibration'></i>
+                        <span>Web Development</span><br>
+                        Web app Development
+                    </li>
+                    <li>
+                        <i class='bx bxs-star' ></i>
+                        <span>Other Competencies</span><br>
+                        Adobe, Critical Thinking, Graphic Design, Microsoft 365(Office), Research, Photography, etc...
+                    </li>
                 </ul>
             </div>
             <div class="tab-contents" id="experience"> <!-- Add id="experience" -->
                 <ul>
                     <li>
-                        <i class='bx bx-user'></i>
-                        <span>Job Title</span><br>
-                        Description of your work experience
+                        <i class='bx bx-code'></i>
+                        <span>2020: Creating Website</span><br>
+                        Use of HTML, CSS, and JavaScript.
+                    </li>
+                    <li>
+                        <i class='bx bxs-keyboard'></i>
+                        <span>2021: Learning & Exploring Coding</span><br>
+                        C language and C++
+                    </li>
+                    <li>
+                        <i class='bx bxl-python' ></i>
+                        <span>2022: Learning Python</span><br>
+                        Encryption and Decryption, etc...
+                    </li>
+                    <li>
+                        <i class='bx bx-laptop' ></i> 
+                        <span>2023: Graphic Designing, Prototyping, & Web Development</span><br>
+                        Adobe, Designing Application, Editiing, and Creating Website
                     </li>
                 </ul>
             </div>
             <div class="tab-contents" id="education"> <!-- Add id="education" -->
                 <ul>
                     <li>
-                        <i class='bx bx-user'></i>
-                        <span>Education</span><br>
-                        Description of your education
+                        <i class='bx bx-code'></i>
+                        <span>S.Y 2021-2024: Tertiary</span><br>
+                        Technological University of the Philippines, Manila
+                    </li>
+                    <li>
+                        <i class='bx bxs-keyboard'></i>
+                        <span>S.Y 2019-2021: Senior High School</span><br>
+                        Technological Institute of the Philippines, Quezon City
+                    </li>
+                    <li>
+                        <i class='bx bxl-python' ></i>
+                        <span>S.Y 2015-2016 | 2018-2019: Secondary</span><br>
+                        Barangka National High School, Marikina City
+                    </li>
+                    <li>
+                        <i class='bx bxl-python' ></i>
+                        <span>S.Y 2017-2018: Secondary</span><br>
+                        Holy Trinity Academy, Sampaloc Manila
+                    </li>
+                    <li>
+                        <i class='bx bx-laptop' ></i> 
+                        <span>S.Y 2008-2015: Primary</span><br>
+                        Mayamot Elemtary School, Antipolo City
                     </li>
                 </ul>
             </div>
