--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#service">service</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a> <!-- Assuming you have a section with id "contact" -->
         </nav>
@@ -158,6 +157,12 @@
     <section class="projects" id="projects">
         <p class="section__text__p1">Explore My </p>
         <h2 class="heading">Latest<span> Projects</span></h2>
+        
+        <div class="projects-container">
+            <div class="projects-box">
+                <img src=""./assets/figma.jpg" alt="">
+            </div>
+        </div>
 
         
 
