--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
                 <div class="projects-layer">
                     <h4>Meat Inventory System with Databaase</h4>
                     <p>Use of Python language database</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/eloissa20/Meat-Inventory-Sytem/tree/697d7fb38226b644654b23037b70f4fe5cc3d185"><i class='bx bxl-github'></i></a>
+                    
                 </div>
             </div>
 
