add pictures and updated media

--- a/index.html
+++ b/index.html
@@ -183,36 +183,36 @@
                 <img src="./assets/Meat Inventory System.png" alt="">
                 <div class="projects-layer">
                     <h4>Meat Inventory System with Databaase</h4>
-                    <p>Use of Python language database</p>
+                    <p>Use of Python language and database</p>
                     <a href="https://github.com/eloissa20/Meat-Inventory-Sytem/tree/697d7fb38226b644654b23037b70f4fe5cc3d185"><i class='bx bxl-github'></i></a>
                     
                 </div>
             </div>
 
             <div class="projects-box">
-                <img src="./assets/figma.jpg" alt="">
+                <img src="./assets/confianzaVogue_grp3.png" alt="">
                 <div class="projects-layer">
-                    <h4>Mobile Applications Prototype</h4>
-                    <p>Use of Figma for Creating an Ice Cream Shop</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Confianza & Vogue website</h4>
+                    <p>The Confianza & Vogue website is a fashion visual discovery engine.</p>
+                    <a href="https://github.com/eloissa20/GROUP-3_WEBSITE.git"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
             <div class="projects-box">
-                <img src="./assets/figma.jpg" alt="">
+                <img src="./assets/CRYPTOGRAPHY.png" alt="">
                 <div class="projects-layer">
-                    <h4>Mobile Applications Prototype</h4>
-                    <p>Use of Figma for Creating an Ice Cream Shop</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Cryptography with GUI</h4>
+                    <p>Use of Python</p>
+                    <a href="https://github.com/eloissa20/Cryptography-with-GUI.git"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
             <div class="projects-box">
-                <img src="./assets/figma.jpg" alt="">
+                <img src="./assets/studentprog.png" alt="">
                 <div class="projects-layer">
-                    <h4>Mobile Applications Prototype</h4>
-                    <p>Use of Figma for Creating an Ice Cream Shop</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Student Record Program</h4>
+                    <p>MENU DRIVEN Student Record Program by implementing Object Oriented Programming concepts and principles</p>
+                    <a href="https://github.com/eloissa20/STUDENT-RECORD-PROGRAM.git"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
 
