--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 
     <section class="projects" id="projects">
-        <p class="section__text__p1">Explore My </p>
+        <p class="upper-title">Explore My</p>
         <h2 class="heading">Latest<span> Projects</span></h2>
         
         <div class="projects-container">
