fixed table content

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a> <!-- Assuming you have a section with id "contact" -->
+            <a href="#contact">Contact</a>
         </nav>
     </header>
-
+https://www.facebook.com/mariaeloissa.andal?mibextid=ZbWKwL
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, my name is</h3>
@@ -33,27 +33,27 @@
             <h3>And I am a <span class="multiple-text"></span></h3>
             <p>I design and code beautifully. Strong attention to small details.</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.facebook.com/mariaeloissa.andal?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
+                <a href="https://twitter.com/riassang_?t=EDqaXA11hYhGqPdHuTfXig&s=07"><i class='bx bxl-twitter'></i></a>
+                <a href="https://instagram.com/dlwdz_?igshid=OGQ5ZDc2ODk2ZA=="><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/maria-eloissa-andal-863252278/"><i class='bx bxl-linkedin'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
         
         <div class="home-img">
-            <img src="./assets/profile-image.png" alt="Your Image Description">
+            <img src="./assets/profile pic.png  " alt="Your Image Description">
         </div>
     </section>
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./assets/profile-image.png" alt="">
+            <img src="./assets/profile pic.png" alt="">
         </div>
 
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Developer & <span>Designer</span></h3>
+            <h3>Full-stack <span>Developer</span></h3>
             <p>Creative, hardworking information systems student with an upbeat mindset and a diverse set of strong skills, 
                 anticipating to graduate in July 2025. Seeking an internship to apply for and expand my natural language 
                 processing service. Technologically competent, with service with a variety of social media platforms, 
@@ -67,7 +67,6 @@
             <a href="#" class="btn read-less" style="display: none;">Read Less</a>
             
             <div class="tab-titles">
-                <!-- Add unique IDs to the tab links and data-tab attributes -->
                 <p class="tab-links active-link" data-tab="skills" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Experience</p>
                 <p class="tab-links" data-tab="education" onclick="opentab('education')">Education</p>
@@ -96,7 +95,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="tab-contents" id="experience"> <!-- Add id="experience" -->
+            <div class="tab-contents" id="experience">
                 <ul>
                     <li>
                         <i class='bx bx-code'></i>
