--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-https://www.facebook.com/mariaeloissa.andal?mibextid=ZbWKwL
+
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, my name is</h3>
@@ -122,27 +122,27 @@ https://www.facebook.com/mariaeloissa.andal?mibextid=ZbWKwL
             <div class="tab-contents" id="education"> <!-- Add id="education" -->
                 <ul>
                     <li>
-                        <i class='bx bx-code'></i>
+                        <i class='bx bxs-school'></i>
                         <span>S.Y 2021-2024: Tertiary</span><br>
                         Technological University of the Philippines, Manila
                     </li>
                     <li>
-                        <i class='bx bxs-keyboard'></i>
+                        <i class='bx bxs-graduation' ></i>
                         <span>S.Y 2019-2021: Senior High School</span><br>
                         Technological Institute of the Philippines, Quezon City
                     </li>
                     <li>
-                        <i class='bx bxl-python' ></i>
+                        <i class='bx bxs-note' ></i>
                         <span>S.Y 2015-2016 | 2018-2019: Secondary</span><br>
                         Barangka National High School, Marikina City
                     </li>
                     <li>
-                        <i class='bx bxl-python' ></i>
+                        <i class='bx bxs-bus-school' ></i>
                         <span>S.Y 2017-2018: Secondary</span><br>
                         Holy Trinity Academy, Sampaloc Manila
                     </li>
                     <li>
-                        <i class='bx bx-laptop' ></i> 
+                        <i class='bx bx-child' ></i>
                         <span>S.Y 2008-2015: Primary</span><br>
                         Mayamot Elemtary School, Antipolo City
                     </li>
