--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <img src="./assets/studentprog.png" alt="">
                 <div class="projects-layer">
                     <h4>Student Record Program</h4>
-                    <p>MENU DRIVEN Student Record Program by implementing Object Oriented Programming concepts and principles</p>
+                    <p>MENU DRIVEN Student Record Program</p>
                     <a href="https://github.com/eloissa20/STUDENT-RECORD-PROGRAM.git"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
