--- a/index.html
+++ b/index.html
@@ -32,13 +32,25 @@
             <h1>Maria Eloissa Andal</h1>
             <h3>And I am a <span class="multiple-text"></span></h3>
             <p>I design and code beautifully. Strong attention to small details.</p>
+            <div class="contact-info">
+                <ul>
+                    <li>
+                        <i class='bx bxs-envelope'></i>
+                        <a href="mailto:mariaeloissa.andal@tup.edu.ph">mariaeloissa.andal@tup.edu.ph</a>
+                    </li>
+                    <li>
+                        <i class='bx bxs-phone'></i>
+                        <a href="tel:09562817944">09562817944</a>
+                    </li>
+                </ul>
+            </div>
             <div class="social-media">
                 <a href="https://www.facebook.com/mariaeloissa.andal?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
                 <a href="https://twitter.com/riassang_?t=EDqaXA11hYhGqPdHuTfXig&s=07"><i class='bx bxl-twitter'></i></a>
                 <a href="https://instagram.com/dlwdz_?igshid=OGQ5ZDc2ODk2ZA=="><i class='bx bxl-instagram'></i></a>
                 <a href="https://www.linkedin.com/in/maria-eloissa-andal-863252278/"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="ANDAL RESUME.pdf" class="btn">Download CV</a>
         </div>
         
         <div class="home-img">
@@ -60,8 +72,12 @@
                 office technology programs, and advanced computer skills, as well as a positive attitude and a willingness 
                 and motivation to learn new programs.</p>
             <div class="additional-content" style="display: none;">
-                <!-- Additional content goes here -->
-                <p>This is additional content that can be shown or hidden.</p>
+                <p>A fun fact about me is that I am a true culinary adventurer with a fiery passion for spicy food that can set my 
+                    taste buds ablaze! When I'm not conquering the kitchen, I'm a wizard behind the camera and computer screen, seamlessly 
+                    editing videos and pictures with an artistic flair that leaves everyone in awe. With my boundless and wild imagination, 
+                    I can turn the ordinary into something extraordinary, making every project a captivating masterpiece. But it's not just 
+                    creativity that defines me; I'm also a hardworking dynamo, dedicated to giving my all to every task I tackle. Spicy food, 
+                    imagination, creativity, and diligence—a unique combination that makes me a remarkable and unforgettable individual!</p>
             </div>
             <a href="#" class="btn read-more">Read More</a>
             <a href="#" class="btn read-less" style="display: none;">Read Less</a>
@@ -155,14 +171,14 @@
 
     <section class="projects" id="projects">
         <p class="upper-title">Explore My</p>
-        <h2 class="heading">Latest<span> Projects</span></h2>
+        <h2 class="title">Latest Projects</h2>
         
         <div class="projects-container">
             <div class="projects-box">
                 <img src="./assets/figma.png" alt="">
                 <div class="projects-layer">
                     <h4>Mobile Applications Prototype</h4>
-                    <p>Use of Figma for Creating an Ice Cream Shop</p>
+                    <p>Use of Figma for Creating Shop</p>
                     <a href="https://www.figma.com/file/Wrs1nq7kaKeNpwn0KjfaOY/ICE-CREAM-ONLINE-SHOP?type=design&node-id=0%3A1&mode=design&t=pCMcHxodmSA4iv64-1">
                         <i class='bx bx-link-external'></i>
                     </a>
@@ -192,7 +208,7 @@
                 <img src="./assets/confianzaVogue_grp3.png" alt="">
                 <div class="projects-layer">
                     <h4>Confianza & Vogue website</h4>
-                    <p>The Confianza & Vogue website is a fashion visual discovery engine.</p>
+                    <p>A website is a fashion visual discovery engine.</p>
                     <a href="https://github.com/eloissa20/GROUP-3_WEBSITE.git"><i class='bx bxl-github'></i></a>
                 </div>
             </div>
@@ -221,20 +237,17 @@
 
         <form action="#">
             <div class="input-box">
-                <input type="text" placeholder="Full Name">
-                <input type="email" placeholder="Email Address">
+                <input type="text" placeholder="Full Name" required>
+                <input type="email" placeholder="Email Address" required>
             </div>
             <div class="input-box">
-                <input type="number" placeholder="Mobile Number">
-                <input type="text" placeholder="Email Subject">
+                <input type="number" placeholder="Mobile Number" required>
+                <input type="text" placeholder="Email Subject" required>
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
-
-
-
 
     <footer class="footer">
         <div class="footer-text">
