--- a/index.html
+++ b/index.html
@@ -229,9 +229,36 @@
                     <p>MENU DRIVEN Student Record Program</p>
                     <a href="https://github.com/eloissa20/STUDENT-RECORD-PROGRAM.git"><i class='bx bxl-github'></i></a>
                 </div>
-            </div>   
+            </div>
+
+            <div class="projects-box">
+                <img src="./assets/STBverse.png" alt="">
+                <div class="projects-layer">
+                    <h4>STBverse: K-Pop Website</h4>
+                    <p>Creatin a Personal Interest Website</p>
+                    <a href="https://stbverse.netlify.app/"><i class='bx bxl-netlify'></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="./assets/Numbers.png" alt="">
+                <div class="projects-layer">
+                    <h4>React Application</h4>
+                    <p>Increase and Decrease Number and Reset</p>
+                    <a href="https://github.com/eloissa20/myreactappBSIS3A.git"><i class='bx bxl-github'></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="./assets/ToDoList.png" alt="">
+                <div class="projects-layer">
+                    <h4>React Application</h4>
+                    <p>To Do List</p>
+                    <a href="https://github.com/eloissa20/personaltodolist.git"><i class='bx bxl-github'></i></a>
+                </div>
+            </div>
         </div>
-    
+    </section>
 
  
     <section class="contact" id="contact">
