--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <h3>Hello, my name is</h3>
             <h1>Maria Eloissa Andal</h1>
             <h3>And I am a <span class="multiple-text"></span></h3>
-            <p>I design and code beautifully. Strong attention to small details.</p>
+            <p>I create visually stunning designs and write clean, efficient code <br>
+                with a keen eye for detail and precision.</p>
             <div class="contact-info">
                 <ul>
                     <li>
@@ -189,12 +190,29 @@
                 </div>
             </div>
 
+            <div class="projects-box">
+                <img src="./assets/school.png" alt="">
+                <div class="projects-layer">
+                    <h4>EDU: BRIGHT</h4>
+                    <p>Creating a School System</p>
+                    <a href="https://github.com/acpr-2023/school"><i class='bx bxl-netlify'></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
+                <img src="./assets/cleaning fairies.png" alt="">
+                <div class="projects-layer">
+                    <h4>Cleaning Fairies</h4>
+                    <p>Creating a Housekeeper Service Website</p>
+                    <a href="https://github.com/acpr-2023/finalproject_bsis"><i class='bx bxl-netlify'></i></a>
+                </div>
+            </div>
 
             <div class="projects-box">
                 <img src="./assets/STBverse.png" alt="">
                 <div class="projects-layer">
                     <h4>STBverse: K-Pop Website</h4>
-                    <p>Creating a Personal Interest Website</p>
+                    <p>Creating an innovative e-commerce platform</p>
                     <a href="https://stbverse.netlify.app/"><i class='bx bxl-netlify'></i></a>
                 </div>
             </div>
@@ -209,6 +227,15 @@
             </div>
 
             <div class="projects-box">
+                <img src="./assets/mobile interface.png" alt="">
+                <div class="projects-layer">
+                    <h4>Mobile User Interface</h4>
+                    <p>Use of Adobe</p>
+                    <a href="https://github.com/eloissa20/ADOBE-FILE.git"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="projects-box">
                 <img src="./assets/figma.png" alt="">
                 <div class="projects-layer">
                     <h4>Mobile Applications Prototype</h4>
@@ -218,16 +245,6 @@
                     </a>
                 </div>
             </div>
-
-            <div class="projects-box">
-                <img src="./assets/mobile interface.png" alt="">
-                <div class="projects-layer">
-                    <h4>Mobile User Interface</h4>
-                    <p>Use of Adobe</p>
-                    <a href="https://github.com/eloissa20/ADOBE-FILE.git"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
 
             <div class="projects-box">
                 <img src="./assets/Meat Inventory System.png" alt="">
