--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://instagram.com/dlwdz_?igshid=OGQ5ZDc2ODk2ZA=="><i class='bx bxl-instagram'></i></a>
                 <a href="https://www.linkedin.com/in/maria-eloissa-andal-863252278/"><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="RESUME OJT ANDAL.pdf" class="btn">Download CV</a>
+            <a href="RESUME ANDAL.pdf" class="btn">Download CV</a>
         </div>
         
         <div class="home-img">
